[major]: rm main.js; rm browser.* short names; mk msg api in bg.js to get config

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
 		"unlimitedStorage"
 	],
 	"background": {
-		"scripts": ["/js/main.js", "/js/bg.js"],
+		"scripts": ["/js/bg.js"],
 		"persistent": false,
 		"type": "module"
 	},
